<resources>
    <string name="app_name">DEL Container</string>
    <string name="title_services">Services</string>
    <string name="title_sources">Sources</string>
    <string name="title_settings">Settings</string>
    <string name="title_delete">Delete</string>
    <string name="ble_not_supported">Bluetooth LE is not supported on your device</string>
    <string name="ble_list">Found Devices</string>
    <string name="heart_rate_label">Heart Rate</string>
    <string name="heart_rate_value">Heart Rate Value</string>
    <string name="heart_rate_app_value">Heart Rate App</string>
    <string name="location_label">Location</string>
    <string name="remove_devices_value">Disconnect Devices</string>
    <string name="connect_bluetooth_devices">Connect to selected device?</string>
    <string name="connect_bluetooth_devices_dialog_title">Device Confirmation</string>
    <string name="installed_services">My Services</string>
    <string name="more_services">Available Services</string>
    <string name="devices_found">Devices Found</string>
    <string name="rescan_devices">Rescan</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Sign In</string>
    <string name="logout_button">Sign Out</string>
    <string name="privacy">Privacy</string>
    <string name="settings">Settings</string>
    <string name="data_and_storage">Data and Storage</string>
    <string name="help">Help</string>
    <string name="web_desktop_extension">Web/Desktop Extension</string>
    <string name="notifications">Notifications</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="permission_banner_text">This application will be able to do the following</string>
    <string name="permissions_header_text">Application permissions</string>
    <string name="okay_text">OK</string>
    <string name="install_text">Install</string>
    <string name="cancel_text">Cancel</string>
    <string name="megan_fox">Megan Fox</string>
    <string name="notification_channel_name">DEL Container</string>
    <string name="notification_channel_description">DEL Container Notification Channel</string>
</resources>
