<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_services">

    <fragment
        android:id="@+id/navigation_services"
        android:name="com.del.delcontainer.ui.services.ServicesFragment"
        android:label="@string/title_services"
        tools:layout="@layout/fragment_services" />

    <fragment
        android:id="@+id/navigation_sources"
        android:name="com.del.delcontainer.ui.sources.SourcesFragment"
        android:label="@string/title_sources"
        tools:layout="@layout/fragment_sources" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.del.delcontainer.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>